--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marcinito.github.io/react/",
+  "homepage": "https://marcinito.github.io/strona/",
   "name": "marcin",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +13,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.48.0",
     "web-vitals": "^2.1.3"
   },
